--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: Add Plex repo
   yum_repository:
     name: PlexRepo
-    file: plex.repo
+    file: plex
     baseurl: "{{ plex_baseurl }}"
     gpgkey: "{{ plex_gpgurl }}"
     gpgcheck: yes
